--- a/app/src/main/res/layout/fragment_school_sch.xml
+++ b/app/src/main/res/layout/fragment_school_sch.xml
@@ -11,7 +11,7 @@
 
         <variable
             name="fragment"
-            type="com.example.hakrim.view.fragment.SchoolInformationFragment" />
+            type="com.example.hakrim.view.fragment.SchoolSchFragment" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -22,7 +22,7 @@
             android:id="@+id/frameLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#F3D2D2"
+            android:background="#88BFD8"
             android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -74,6 +74,7 @@
             android:id="@+id/schedule_recycler"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            listData="@{viewModel.sch}"
             app:layout_constraintTop_toBottomOf="@+id/frameLayout"
             tools:listitem="@layout/school_schedule_row" />
 
