[UPDATE] Meal UI

--- a/app/src/main/res/layout/fragment_meal.xml
+++ b/app/src/main/res/layout/fragment_meal.xml
@@ -5,7 +5,7 @@
     <data>
 
         <variable
-            name="fragment"
+            name="fragmaent"
             type="com.example.hakrim.view.fragment.MealFragment" />
 
 
