--- a/app/src/main/res/layout/school_schedule_row.xml
+++ b/app/src/main/res/layout/school_schedule_row.xml
@@ -3,15 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-<variable
-    name="scheduleItem"
-    type="com.example.hakrim.dto.mealp.schoolschedule.Row" />
+
+        <variable
+            name="scheduleItem"
+            type="com.example.hakrim.dto.schoolschedule.Row" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_marginTop="10dp"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp">
 
         <TextView
             android:id="@+id/textView"
@@ -20,13 +21,11 @@
             android:layout_marginLeft="20dp"
             android:text="-"
             android:textSize="20sp"
-
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-
             android:id="@+id/schedule_day_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -42,8 +41,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
-            android:textSize="20sp"
             android:text="@{scheduleItem.EVENT_NM}"
+            android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/schedule_day_text"
             app:layout_constraintTop_toTopOf="parent" />
