[UPDATE] BindingAdapter로 RecyclerView 불러오기

--- a/app/src/main/res/layout/school_schedule_row.xml
+++ b/app/src/main/res/layout/school_schedule_row.xml
@@ -3,9 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-
         <variable
-            name="scheduleItem"
+            name="row"
             type="com.example.hakrim.dto.schoolschedule.Row" />
     </data>
 
@@ -30,7 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:text="@{scheduleItem.AA_YMD}"
+            android:text="@{row.AA_YMD}"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textView"
@@ -41,7 +40,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
-            android:text="@{scheduleItem.EVENT_NM}"
+            android:text="@{row.EVENT_NM}"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/schedule_day_text"
