--- a/app/src/main/res/layout/fragment_school_sch.xml
+++ b/app/src/main/res/layout/fragment_school_sch.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
         <variable
             name="viewModel"
             type="com.example.hakrim.viewmodel.fragment.SchoolScheduleViewModel" />
@@ -12,6 +11,7 @@
         <variable
             name="fragment"
             type="com.example.hakrim.view.fragment.SchoolSchFragment" />
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -74,8 +74,9 @@
             android:id="@+id/schedule_recycler"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            listData="@{viewModel.sch}"
             app:layout_constraintTop_toBottomOf="@+id/frameLayout"
+            listData="@{viewModel.schList}"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:listitem="@layout/school_schedule_row" />
 
 
